[gd_scene load_steps=7 format=3 uid="uid://7arpt0gyrwun"]

[ext_resource type="Script" path="res://scripts/level_test.gd" id="1_bct04"]
[ext_resource type="Texture2D" uid="uid://cb0a548f34e08" path="res://assets/Kenney-Urban-Pack/Tilemap/tilemap_packed.png" id="2_0phsk"]
[ext_resource type="PackedScene" uid="uid://dt6l5474s7d6c" path="res://prefabs/turn_queue.tscn" id="2_ch4hk"]
[ext_resource type="PackedScene" uid="uid://cvu5su62sv23g" path="res://actors/player_1_table.tscn" id="3_yndm5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y5mud"]
texture = ExtResource("2_0phsk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0

[sub_resource type="TileSet" id="TileSet_6f3m3"]
sources/2 = SubResource("TileSetAtlasSource_y5mud")

[node name="LevelTest" type="Node2D"]
script = ExtResource("1_bct04")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6f3m3")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 524290, 3, 65538, 589826, 3, 65539, 589826, 3, 65540, 589826, 3, 65541, 589826, 3, 65542, 589826, 3, 65543, 589826, 3, 65544, 589826, 3, 131080, 589826, 4, 196616, 589826, 4, 262152, 589826, 4, 327688, 589826, 4, 327687, 589826, 4, 393223, 589826, 5, 393222, 589826, 5, 393221, 589826, 5, 393220, 589826, 5, 393219, 589826, 5, 393218, 589826, 5, 327682, 589826, 4, 327681, 524290, 4, 262145, 524290, 4, 196609, 524290, 4, 131073, 524290, 4, 393217, 524290, 5, 131074, 589826, 4, 196610, 589826, 4, 262146, 589826, 4, 262147, 589826, 4, 196611, 589826, 4, 131075, 589826, 4, 131076, 589826, 4, 131077, 589826, 4, 131078, 589826, 4, 131079, 589826, 4, 196615, 589826, 4, 262151, 589826, 4, 262150, 589826, 4, 262149, 589826, 4, 196613, 589826, 4, 196612, 589826, 4, 262148, 589826, 4, 327685, 589826, 4, 327684, 589826, 4, 327683, 589826, 4, 327686, 589826, 4, 196614, 589826, 4, 393224, 589826, 5, 131081, 655362, 4, 196617, 655362, 4, 262153, 655362, 4, 327689, 655362, 4, 65545, 655362, 3, 393225, 655362, 5, 131082, 589826, 7, 196618, 589826, 7, 262154, 589826, 7, 327690, 589826, 7, 393226, 589826, 7, 393227, 589826, 7, 327691, 589826, 7, 262155, 589826, 7, 196619, 589826, 7, 131083, 589826, 7, 131084, 589826, 7, 196620, 589826, 7, 262156, 589826, 7, 327692, 589826, 7, 393228, 589826, 7, 458764, 589826, 7, 458763, 589826, 7, 458762, 589826, 7, 458761, 589826, 7, 458760, 589826, 7, 458759, 589826, 7, 458758, 589826, 7, 458757, 589826, 7, 458756, 589826, 7, 458755, 589826, 7, 458754, 589826, 7, 458753, 589826, 7, 524289, 589826, 7, 524290, 589826, 7, 524291, 589826, 7, 524292, 589826, 7, 524293, 589826, 7, 524294, 589826, 7, 524295, 589826, 7, 524296, 589826, 7, 524297, 589826, 7, 524298, 589826, 7, 524299, 589826, 7, 524300, 589826, 7, 65546, 589826, 17, 65547, 589826, 17, 65548, 589826, 17, 65549, 2, 16, 131085, 589826, 17, 196621, 589826, 17, 262157, 589826, 17, 327693, 589826, 17, 393229, 589826, 17, 458765, 589826, 17, 524301, 2, 15, 524302, 65538, 15, 458766, 589826, 17, 393230, 589826, 17, 327694, 589826, 17, 262158, 589826, 17, 196622, 589826, 17, 131086, 589826, 17, 65550, 65538, 16, 14, 65538, 15, 13, 2, 15, 12, 1179650, 10, 11, 589826, 17, 10, 589826, 17, 9, 1310722, 10, 8, 1245186, 10, 7, 1179650, 10, 6, 1310722, 10, 5, 1245186, 10, 4, 1179650, 10, 3, 1179650, 6, 2, 1179650, 6, 1, 1179650, 6, 0, 1179650, 6, 65536, 589826, 17, 131072, 2, 12, 196608, 2, 13, 262144, 2, 13, 327680, 2, 13, 393216, 2, 14, 458752, 589826, 17, 524288, 589826, 17, 589823, 589826, 17, 524287, 589826, 17, 458751, 589826, 17, 393215, 589826, 17, 327678, 589826, 17, 262142, 589826, 17, 196606, 589826, 17, 131070, 589826, 17, 131071, 589826, 17, 65535, 1179650, 6, 65534, 1179650, 6, 196607, 589826, 17, 262143, 589826, 17, 327679, 589826, 17, 393214, 589826, 17, 458750, 589826, 17, 524286, 589826, 17, 589822, 589826, 17, 589838, 65538, 16, 589837, 2, 16, 589836, 589826, 17, 589835, 589826, 17, 589834, 589826, 17, 589833, 589826, 17, 589832, 589826, 17, 589831, 589826, 17, 589830, 589826, 17, 589829, 589826, 17, 589828, 589826, 17, 589827, 589826, 17, 589826, 589826, 17, 589825, 589826, 17, 589824, 589826, 17, 655359, 589826, 17, 655358, 589826, 17, 65530, 1179650, 6, 131066, 1179650, 6, 196602, 1179650, 6, 262138, 1179650, 6, 327674, 1179650, 6, 393210, 1179650, 6, 458746, 1179650, 6, 524282, 1179650, 6, 589818, 1179650, 6, 655354, 1179650, 6, 65531, 1179650, 6, 131067, 1179650, 6, 196603, 1179650, 6, 262139, 1179650, 6, 327675, 1179650, 6, 393211, 1179650, 6, 458747, 1179650, 6, 524283, 1179650, 6, 589819, 1179650, 6, 655355, 1179650, 6, 65532, 1179650, 6, 131068, 1179650, 6, 196604, 1179650, 6, 262140, 1179650, 6, 327676, 1179650, 6, 393212, 1179650, 6, 458748, 1179650, 6, 524284, 1179650, 6, 589820, 1179650, 6, 655356, 1179650, 6, 65533, 1179650, 6, 131069, 1179650, 6, 196605, 1179650, 6, 262141, 1179650, 6, 327677, 1179650, 6, 393213, 1179650, 6, 458749, 1179650, 6, 524285, 1179650, 6, 589821, 1179650, 6, 655357, 1179650, 6, -65538, 1179650, 6, -2, 1179650, 6, -65537, 1179650, 6, -1, 1179650, 6, -131072, 1179650, 6, -65536, 1179650, 6, -131071, 1179650, 6, -65535, 1179650, 6, -131070, 1179650, 6, -65534, 1179650, 6, -131069, 1179650, 6, -65533, 1179650, 6, -131068, 1179650, 8, -65532, 1179650, 9, -131067, 1245186, 8, -65531, 1245186, 9, -131066, 1310722, 8, -65530, 1310722, 9, -131065, 1179650, 8, -65529, 1179650, 9, -131064, 1245186, 8, -65528, 1245186, 9, -131063, 1310722, 8, -65527, 1310722, 9, 131087, 1179650, 8, 196623, 1179650, 9, 262159, 1179650, 10, 131088, 2, 15, 196624, 2, 16, 262160, 2, 15, 131089, 65538, 15, 196625, 65538, 16, 262161, 65538, 15, -131060, 589826, 1, -65524, 589826, 1, -131059, 2, 15, -65523, 2, 16, -131058, 65538, 15, -65522, 65538, 16, 720890, 1245186, 2, 786427, 1048578, 2, 786428, 1376258, 1, 786429, 1114114, 2, 786430, 1114114, 2, 786431, 1310722, 2, 851967, 1441794, 2, 786432, 1179650, 0, 786433, 1245186, 3, 786434, 1376258, 3, 786435, 1179650, 2, 720899, 1376258, 1, 720900, 1245186, 1, 720901, 1245186, 1, 720902, 1114114, 0, 720903, 1441794, 1, 786439, 1114114, 1, 786440, 1245186, 2, 786441, 1048578, 2, 786442, 1441794, 1, 786443, 1179650, 1, 786444, 1441794, 2, 786445, 1114114, 2, 720909, 1048578, 1, 720910, 1048578, 2, 655373, 1376258, 2, 655372, 1441794, 1, 655371, 1114114, 2, 655370, 1048578, 3, 655369, 1114114, 3, 655368, 1245186, 2, 655367, 1376258, 3, 655366, 1179650, 0, 655365, 1048578, 3, 655364, 1048578, 2, 655363, 1310722, 1, 655362, 1048578, 3, 655361, 1179650, 0, 655360, 1048578, 0, 720895, 1441794, 2, 720894, 1376258, 2, 720893, 1179650, 1, 720892, 1114114, 1, 720891, 1179650, 2, 720896, 1376258, 2, 720897, 1441794, 3, 720898, 1179650, 2, 720904, 1179650, 0, 720905, 1245186, 1, 720906, 1310722, 1, 720907, 1245186, 0, 720908, 1114114, 3, 720911, 1245186, 1, 786447, 1048578, 0, 786446, 1245186, 3, 655374, 1376258, 0, 655375, 1245186, 0, 786438, 1048578, 2, 786437, 1441794, 1, 786436, 1179650, 1, 851966, 1376258, 1, 851965, 1310722, 2, 851964, 1310722, 2, 851963, 1114114, 2, 851962, 1441794, 3, 786426, 1048578, 2, -65541, 2, 15, -5, 2, 16, -65540, 65538, 15, -4, 65538, 16, -65539, 131074, 15, -3, 131074, 16, -196613, 2, 15, -131077, 2, 16, -196612, 65538, 15, -131076, 65538, 16, -196611, 131074, 15, -131075, 131074, 16, -196610, 2, 15, -131074, 2, 16, -196609, 65538, 15, -131073, 65538, 16, -262144, 131074, 15, -196608, 131074, 16, -262143, 2, 15, -196607, 2, 16, -262142, 65538, 15, -196606, 65538, 16, -262141, 131074, 15, -196605, 131074, 16, -262140, 2, 15, -196604, 2, 16, -262139, 65538, 15, -196603, 65538, 16, -262138, 131074, 15, -196602, 131074, 16, -262137, 2, 15, -196601, 2, 16, -262136, 65538, 15, -196600, 65538, 16, -262135, 131074, 15, -196599, 131074, 16, -262134, 2, 15, -196598, 2, 16, -262133, 65538, 15, -196597, 65538, 16, -262132, 131074, 15, -196596, 131074, 16, -262131, 2, 15, -196595, 2, 16, -262130, 65538, 15, -196594, 65538, 16, -262129, 131074, 15, -196593, 131074, 16, -131057, 131074, 15, -65521, 131074, 16, 15, 131074, 15, 65551, 131074, 16, 16, 2, 15, 65552, 2, 16, 17, 65538, 15, 65553, 65538, 16, 18, 131074, 15, 65554, 131074, 16, 131090, 131074, 15, 196626, 131074, 16, 327696, 2, 16, 327697, 65538, 16, 262162, 131074, 15, 327698, 131074, 16, 393232, 2, 15, 458768, 2, 16, 393233, 65538, 15, 458769, 65538, 16, 393234, 131074, 15, 458770, 131074, 16, 524303, 131074, 15, 589839, 131074, 16, 524304, 2, 15, 589840, 2, 16, 524305, 65538, 15, 589841, 65538, 16, 524306, 131074, 15, 589842, 131074, 16, 655376, 2, 15, 720912, 2, 16, 655377, 65538, 15, 720913, 65538, 16, 655378, 131074, 15, 720914, 131074, 16, 786448, 2, 15, 851984, 2, 16, 786449, 65538, 15, 851985, 65538, 16, 786450, 131074, 15, 851986, 131074, 16, -262154, 589826, 1, -196618, 589826, 1, -131082, 589826, 1, -65546, 589826, 1, -10, 589826, 1, 65526, 589826, 1, 131062, 589826, 1, 196598, 589826, 1, 262134, 589826, 1, 327670, 589826, 1, 393206, 589826, 1, 458742, 589826, 1, 524278, 589826, 1, 589814, 589826, 1, 655350, 589826, 1, 720886, 589826, 1, 786422, 589826, 1, 851958, 589826, 1, -262153, 589826, 1, -196617, 589826, 1, -131081, 589826, 1, -65545, 589826, 1, -9, 589826, 1, 65527, 589826, 1, 131063, 589826, 1, 196599, 589826, 1, 262135, 589826, 1, 327671, 589826, 1, 393207, 589826, 1, 458743, 589826, 1, 524279, 589826, 1, 589815, 589826, 1, 655351, 589826, 1, 720887, 589826, 1, 786423, 589826, 1, 851959, 589826, 1, -262152, 589826, 1, -196616, 589826, 1, -131080, 589826, 1, -65544, 589826, 1, -8, 589826, 1, 65528, 589826, 1, 131064, 589826, 1, 196600, 589826, 1, 262136, 589826, 1, 327672, 589826, 1, 393208, 589826, 1, 458744, 589826, 1, 524280, 589826, 1, 589816, 589826, 1, 655352, 589826, 1, 720888, 589826, 1, 786424, 589826, 1, 851960, 589826, 1, -262151, 589826, 1, -196615, 589826, 1, -131079, 589826, 1, -65543, 589826, 1, -7, 589826, 1, 65529, 589826, 1, 131065, 589826, 1, 196601, 589826, 1, 262137, 589826, 1, 327673, 589826, 1, 393209, 589826, 1, 458745, 589826, 1, 524281, 589826, 1, 589817, 589826, 1, 655353, 589826, 1, 720889, 589826, 1, 786425, 589826, 1, 851961, 589826, 1, -327686, 589826, 1, -262150, 589826, 1, -327685, 589826, 1, -262149, 589826, 1, -327684, 589826, 1, -262148, 589826, 1, -327683, 589826, 1, -262147, 589826, 1, -327682, 589826, 1, -262146, 589826, 1, -327681, 589826, 1, -262145, 589826, 1, -393216, 589826, 1, -327680, 589826, 1, -393215, 589826, 1, -327679, 589826, 1, -393214, 589826, 1, -327678, 589826, 1, -393213, 589826, 1, -327677, 589826, 1, -393212, 589826, 1, -327676, 589826, 1, -393211, 589826, 1, -327675, 589826, 1, -393210, 589826, 1, -327674, 589826, 1, -393209, 589826, 1, -327673, 589826, 1, -393208, 589826, 1, -327672, 589826, 1, -393207, 589826, 1, -327671, 589826, 1, -393206, 589826, 1, -327670, 589826, 1, -393205, 589826, 1, -327669, 589826, 1, -393204, 589826, 1, -327668, 589826, 1, -393203, 589826, 1, -327667, 589826, 1, -393202, 589826, 1, -327666, 589826, 1, -393201, 589826, 1, -327665, 589826, 1, -393200, 589826, 1, -327664, 589826, 1, -393199, 589826, 1, -327663, 589826, 1, -393198, 589826, 1, -327662, 589826, 1, -262128, 589826, 1, -262127, 589826, 1, -262126, 589826, 1, -196592, 589826, 1, -131056, 589826, 1, -65520, 589826, 1, -196591, 589826, 1, -131055, 589826, 1, -65519, 589826, 1, -196590, 589826, 1, -131054, 589826, 1, -65518, 589826, 1, -131062, 589826, 1, -65526, 589826, 1, -131061, 589826, 1, -65525, 589826, 1, 1048562, 589826, 1, 1048563, 589826, 1, 1048564, 589826, 1, 1048565, 589826, 1, 1048566, 589826, 1, 1048567, 589826, 1, 1048568, 589826, 1, 1048569, 589826, 1, 1048570, 589826, 1, 1048571, 589826, 1, 1048572, 589826, 1, 1048573, 589826, 1, 1048574, 589826, 1, 1048575, 589826, 1, 983040, 589826, 1, 983041, 589826, 1, 983042, 589826, 1, 983043, 589826, 1, 983044, 589826, 1, 983045, 589826, 1, 983046, 589826, 1, 983047, 589826, 1, 983048, 589826, 1, 983049, 589826, 1, 983050, 589826, 1, 983051, 589826, 1, 983052, 589826, 1, 983053, 589826, 1, 983054, 589826, 1, 983055, 589826, 1, 983056, 589826, 1, 983057, 589826, 1, 983058, 589826, 1, 983059, 589826, 1, 983060, 589826, 1, 983061, 589826, 1, 983062, 589826, 1, 983063, 589826, 1, 983064, 589826, 1, 983065, 589826, 1, 983066, 589826, 1, 983067, 589826, 1, 917531, 589826, 1, 851995, 589826, 1, 786459, 589826, 1, 720923, 589826, 1, 655387, 589826, 1, 589851, 589826, 1, 524315, 589826, 1, 458779, 589826, 1, 393243, 589826, 1, 327707, 589826, 1, 262171, 589826, 1, 196635, 589826, 1, 131099, 589826, 1, 65563, 589826, 1, 27, 589826, 1, -65509, 589826, 1, -131045, 589826, 1, -196581, 589826, 1, -262117, 589826, 1, -327653, 589826, 1, -393189, 589826, 1, -458725, 589826, 1, -524261, 589826, 1, -589797, 589826, 1, -589798, 589826, 1, -589799, 589826, 1, -589800, 589826, 1, -589801, 589826, 1, -589802, 589826, 1, -589803, 589826, 1, -589804, 589826, 1, -589805, 589826, 1, -589806, 589826, 1, -589807, 589826, 1, -589808, 589826, 1, -589809, 589826, 1, -589810, 589826, 1, -589811, 589826, 1, -589812, 589826, 1, -589813, 589826, 1, -589814, 589826, 1, -589815, 589826, 1, -589816, 589826, 1, -589817, 589826, 1, -589818, 589826, 1, -589819, 589826, 1, -589820, 589826, 1, -589821, 589826, 1, -589822, 589826, 1, -589823, 589826, 1, -589824, 589826, 1, -524289, 589826, 1, -524290, 589826, 1, -524291, 589826, 1, -524292, 589826, 1, -524293, 589826, 1, -524294, 589826, 1, -524295, 589826, 1, -524296, 589826, 1, -524297, 589826, 1, -524298, 589826, 1, -524299, 589826, 1, -524300, 589826, 1, -524301, 589826, 1, -524302, 589826, 1, -458766, 589826, 1, -393230, 589826, 1, -327694, 589826, 1, -262158, 589826, 1, -196622, 589826, 1, -131086, 589826, 1, -65550, 589826, 1, -14, 589826, 1, 65522, 589826, 1, 131058, 589826, 1, 196594, 589826, 1, 262130, 589826, 1, 327666, 589826, 1, 393202, 589826, 1, 458738, 589826, 1, 524274, 589826, 1, 589810, 589826, 1, 655346, 589826, 1, 720882, 589826, 1, 786418, 589826, 1, 851954, 589826, 1, 917490, 589826, 1, 983026, 589826, 1, 327702, 589826, 7, 262166, 589826, 7, 262167, 589826, 7, 327703, 589826, 7, 327701, 589826, 7, 262165, 589826, 7)

[node name="TurnQueue" parent="." instance=ExtResource("2_ch4hk")]

[node name="player1_table" parent="TurnQueue" instance=ExtResource("3_yndm5")]
position = Vector2(108, 68)

[node name="player1_table2" parent="TurnQueue" instance=ExtResource("3_yndm5")]
position = Vector2(166, 87)

[node name="camera" type="Camera2D" parent="."]
position = Vector2(160, 90)
